; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/infiniband-diags/src/extr_ibtracert.c_resolve_lid.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/infiniband-diags/src/extr_ibtracert.c_resolve_lid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IB_ATTR_PORT_INFO = common dso_local global i32 0, align 4
@IB_PORT_LID_F = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @resolve_lid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @resolve_lid(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca [64 x i32], align 16
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = bitcast [64 x i32]* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %8, i8 0, i64 256, i1 false)
  %9 = getelementptr inbounds [64 x i32], [64 x i32]* %6, i64 0, i64 0
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @IB_ATTR_PORT_INFO, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @smp_query_via(i32* %9, i32* %10, i32 %11, i32 0, i32 0, i8* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %23

16:                                               ; preds = %2
  %17 = getelementptr inbounds [64 x i32], [64 x i32]* %6, i64 0, i64 0
  %18 = load i32, i32* @IB_PORT_LID_F, align 4
  %19 = call i32 @mad_decode_field(i32* %17, i32 %18, i32* %7)
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @ib_portid_set(i32* %20, i32 %21, i32 0, i32 0)
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %16, %15
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @smp_query_via(i32*, i32*, i32, i32, i32, i8*) #2

declare dso_local i32 @mad_decode_field(i32*, i32, i32*) #2

declare dso_local i32 @ib_portid_set(i32*, i32, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
